[package]
name = "tracing-mutex-span"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.17"
tokio = { version = "1.28.2", features = ["full"] }
tracing-stacks = { git = "https://github.com/cablehead/tracing-stacks.git", branch = "main" }
